# s2geography_c

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: ci.yml
include/: s2geography_c.h
src/: s2geography_c.cc
